﻿﻿IMPROVEMENTS / FIXES
- AI:
	- Add target priority debug info to the telemetry and AI debugging.
- Competition:
	- Add a hidden setting for the number of attempts of a heat during a tournament before using the "start despite failures" option (if enabled).

v1.8.0.1
IMPROVEMENTS / FIXES
- Weapons:
	- Missiles:
		- Fix not being able to manually fire GPS-guided bombs/missiles without an AI-assigned target.

v1.8.0.0
IMPROVEMENTS / FIXES
- General:
	- Adjust fuel leak FX to work better in space and low atmospheric density.
	- Add the ability to add custom sub-categories to the BDA part categorizer.
	- Add some new missile plume prefabs for jets/sustainer stages.
- UI:
	- Improve prevention of click-through of various windows in the editor.
	- Open sections of the AI GUI now remain open when switching between flight and editor.
	- Competition UI text in the upper left corner now properly scales when adjusting UI_SCALE.
	- Added an option to follow the stock UI scaling instead of BDA's one.
	- Add ability to set teams' Allies to the Team Selector GUI.
	- Add craft thumbnails to the custom craft browser.
	- Add a button (in the Settings->UI section) when in the SPH/VAB to generate missing craft thumbnails (which can be found in KSP/thumbs).
		- Generating thumbnails involves loading each craft and capturing a thumbnail. This can take some time if many are missing.
	- Add "VAB Organizer" MM patch for BDA parts — from user Spartwo.
- AI:
	- Fix AI not going into Ramming mode when guns possess ammo, but not enough to meet resourceRequestAmount of mounted weapons.
	- Orbital AI now automatically disables gimbal on reverse thrust and RCS engines (gimbal directions for these are incorrect).
	- Add missing sonar checks for AIs trying to fire torpedoes.
	- Fix AI not turning on Active sonar when trying to fire INS torpedoes if no passive sonar on vessel.